# modkit

./: .gitignore  .gitlab-ci.yml  BUILD_NOTES_tch.txt  CHANGELOG.md  Cargo.toml  README.md  generate_advanced_usage.sh  rust-toolchain.toml
book/: book.toml
book/src/: SUMMARY.md  advanced_usage.md  filtering.md  intro_adjust.md  intro_call_mods.md  intro_find_motifs.md  intro_open_chromatin.md  (+6 more)
docs/: 404.html  advanced_usage.html  algo_details.html  collapse.html  dmr_scoring_details.html  evaluate_motif.html  faq.html  filtering.html  filtering_details.html  filtering_numeric_details.html  index.html  intro_adjust.html  intro_bedmethyl_merge.html  intro_call_mods.html  intro_dmr.html  intro_edge_filter.html  intro_entropy.html  intro_extract.html  intro_find_motifs.html  intro_include_bed.html  intro_localize.html  intro_modbam_check_tags.html  intro_motif.html  intro_motif_bed.html  intro_open_chromatin.html  intro_pileup.html  intro_pileup_hemi.html  intro_repair.html  intro_sample_probs.html  intro_stats.html  intro_summary.html  intro_validate.html  limitations.html  migrating_060.html  motif_search_structured_logging.html  perf_considerations.html  print.html  quick_start.html  searcher-c2a407aa.js  searchindex-1e02af50.js  (+9 more)
modkit/: Cargo.toml
modkit-core/: Cargo.toml
modkit-logging/: Cargo.toml
ochm/: Cargo.toml
ochm/models/r1041_e82_400bps_hac_v5.2.0@v0.1.0/: model.mpk  model_config.json
ochm/src/: batcher.rs  feature_loader.rs  features.rs  lib.rs  models.rs  prob_merger.rs  range_feeder.rs  subcommand.rs  util.rs
safe-record/: Cargo.toml
(+90 files in other folders)
