[package]
name = "ochm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
burn = { version = "0.17.0", features = ["dataset", "ndarray"] }
clap = { version = "4.0.29", features = ["derive", "wrap_help"] }
csv = "1.3.0"
crossbeam = "0.8.2"
derive-new = "0.6.0"
indicatif = { version = "0.17.1", features = ["rayon"] }
itertools = "0.12.1"
log = "0.4.0"
mod_kit = { path = "../modkit-core" }
modkit-logging = { path = "../modkit-logging" }
ndarray = "0.15.6"
rayon = "1.8.0"
rust-htslib = "0.46.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.127"

[features]
accelerate = ["burn/accelerate"]
candle = ["burn/candle-cuda"]
tch = ["burn/tch"]

[dev-dependencies]
common_macros = "0.1.1"



